# MPSchleiSediments

./: .gitignore  Pipfile  Pipfile.lock_BAK  README.md  index.html  main.py  packages.txt  pyproject.toml
MPDB_scripts/: MPDB_blank_procedures.py  MPDB_blank_procedures_BAK.py  MPDB_notebook.ipynb  MPDB_procedures.py  MPDB_settings.py  MPDB_utils.py
ProbDistFunc/: KDE_prepare_data.py  KDE_settings.py  KDE_utils.py  app.py  app_simple_sliders.py  correlations.py  pca.py  size_pdfs.ipynb
analysis/: All_stations.csv  KDE_utils.py  WWTP_influence_counting.ipynb  WWTP_paramter_batch_calc.ipynb  analysis.ipynb  analysis_geospatial.ipynb  app.py  app_glm-Copy1.py  app_glm.py  app_helpers.py  app_loaders.py  app_responseDataCreator.py  app_simple_sliders.py  components.py  correlations.py  cv.ipynb  cv.py  cv_helpers.py  cv_load_serialised.ipynb  cv_workaround_feature_set_generation.ipynb  dists.py  ensemble_compositions.ipynb  feature_csv_combinator.ipynb  final_model.ipynb  geo.py  geo_io.py  glm.py  heights_corr.ipynb  helpers.py  interpol.py  kfold_combinatons_calc.ipynb  load_serialised_model.ipynb  outliers.py  pca.py  pcoa.py  pipelinehelper.py  plots.py  prepare_data.py  rPCAcoDa.py  scatterMatrix_wwtpInfluence.ipynb  (+2 more)
analysis/.streamlit/: config.toml
csv/: Enders_export_10µm_linear_noR_RL.csv  GRADISTAT_Schlei_cau.csv  GRADISTAT_Schlei_iow.csv  MP_Stats_SchleiSediments.csv  Schlei_OM.csv  Schlei_Sed_D50_<63.csv  Schlei_Sed_D50_new.csv  Schlei_sed_sampling_log.csv  env_MP_clean_list_SchleiSediments.csv  schlei_coastline.geojson  sed_size_freqs_for_R.csv  sediment_grainsize.csv  sediment_grainsize_CAU.csv  sediment_grainsize_IOW.csv
data/: GRADISTAT_CAU_vol_log-cau_closed.csv  GRADISTAT_IOW_count_log-cau_not-closed.csv  GRADISTAT_IOW_vol_log-cau_not-closed.csv  ManualHeights_Schlei_S8_v2.csv  Metadata_CAU_sampling_log.csv  Metadata_IOW_sampling_log.csv  SchleiCoastline_from_OSM.geojson  Schlei_OM.csv  Schlei_Sed_Dist_WWTP.csv  Schlei_sed_sampling_log.csv  WWTP_influence.csv  WWTP_influence_CAU.csv  WWTP_influence_IOW.csv  WWTP_influence_MULTI_new.csv  WWTP_influence_MULTI_old.csv  Warnow_sdd.csv  ensemble_compositions_20230918.csv  env_MP_clean_list_SchleiSediments.csv  feature_candidates_list.txt  feature_candidates_list_min2_max3.pkl  feature_candidates_list_min2_max3.txt  feature_candidates_list_min2_max4.pkl  feature_candidates_list_min2_max5.pkl  model_data.csv  mp_pdd.csv  pred_data.csv  sdd_CAU.csv  sdd_IOW.csv  sediment_grainsize_CAU_vol_log-cau_closed.csv  sediment_grainsize_IOW_count_log-cau_not-closed.csv  sediment_grainsize_IOW_vol_linear_not-closed.csv  sediment_grainsize_IOW_vol_log-cau_not-closed.csv  sediment_grainsize_IOW_vol_log-iow_not-closed.csv
data/WWTP_influence_params/: WWTP_influence_nosed_0µm_allseasons_222_.csv  (+25 more)
data/old/: Calc_depth_pred.csv  (+9 more)
gepard_size3/: pkl_files.csv  size3.ipynb
notebooks/: Micropoll_SchleiSediment_blank_subtract.ipynb  SchleiSediment_KDE.ipynb  SchleiSediment_data_analysis_robins_workfile.ipynb
old_scripts_and_notebooks/: BSB_MP_SED_MACRO.ipynb  CodeDump_plots.ipynb  GPBoost_demo.ipynb  Micropoll_SchleiSediment_blank_subtract.ipynb  SchleiSediment_KDE.ipynb  SchleiSediment_data_analysis.ipynb  SchleiSediment_data_analysis_robins_workfile.ipynb  analysis_Jan2023_beforeGradiStatNameFixing.ipynb  analysis_kdeAllSamplesCombined.ipynb  app.py  app_simple_sliders.py  auto_model.ipynb  cv (copy).ipynb  cv copy.ipynb  cv.ipynb  cv_BAK_before_moving_NCV_to_scripts.ipynb
original_notebooks/: Micropoll_SchleiSediment_blank_subtract.ipynb  SchleiSediment_data_analysis.ipynb  SchleiSediment_data_analysis_robins_workfile.ipynb
(+11 files in other folders)
