[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin Lenz", email = "robin.lenz@io-warnemuende.de"},
]
dependencies = [
    "altair-transform @ git+https://github.com/altair-viz/altair-transform.git",
    "altair-viewer",
    "mysql-connector-python",
    "seaborn",
    "statsmodels",
    "vega-datasets",
    "streamlit-vega-lite",
    "rpy2==3.5.1",
    "plotly",
    "pydeck",
    "scikit-bio>=0.5.7",
    "xgboost",
    "scipy==1.8.1",
    "pysal>=2.6.0",
    "ipykernel>=6.15.1",
    "hvplot>=0.8.1",
    #"scikit-learn>=1.1.2",
    "scikit-learn @ https://pypi.anaconda.org/scipy-wheels-nightly/simple/scikit-learn/1.2.dev0/scikit_learn-1.2.dev0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
    "folium>=0.13.0",
    "mapclassify>=2.4.3",
]
requires-python = ">=3.8,<3.10"
license = {text = "GPL-3.0-or-later"}

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
